[gd_scene load_steps=6 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://ChatBox.gd" type="Script" id=2]
[ext_resource path="res://name.gd" type="Script" id=3]
[ext_resource path="res://MultiplayerManager.gd" type="Script" id=4]
[ext_resource path="res://ZThreadController.gd" type="Script" id=5]

[node name="Multiplayer" type="Control"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 272.0
margin_top = 64.0
margin_right = 752.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0941176, 0.282353, 0.129412, 0.509804 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
margin_right = 480.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="Label" parent="ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 340.0
size_flags_vertical = 1
autowrap = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 424.0
margin_top = 448.0
margin_right = 600.0
margin_bottom = 472.0
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )

[node name="name" type="LineEdit" parent="."]
margin_left = 40.0
margin_top = 328.0
margin_right = 216.0
margin_bottom = 352.0
align = 1
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="USERNAME" type="Label" parent="name"]
margin_left = 32.0
margin_top = -24.0
margin_right = 144.0
margin_bottom = -8.0
text = "Enter Username"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipAddress" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 96.0
margin_right = 192.0
margin_bottom = 120.0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPADRESS" type="Label" parent="ipAddress"]
margin_left = 8.0
margin_top = -24.0
margin_right = 120.0
margin_bottom = -8.0
text = "IP Address:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 224.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HOST" type="Label" parent="Join"]
margin_left = -248.0
margin_top = -24.0
margin_right = -136.0
margin_bottom = -8.0
text = "Host:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 48.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JOIN" type="Label" parent="Host"]
margin_left = 168.0
margin_top = -24.0
margin_right = 280.0
margin_bottom = -8.0
text = "Join:"
align = 1
valign = 1

[node name="ZThread" type="Control" parent="."]
script = ExtResource( 5 )

[connection signal="new_message" from="LineEdit" to="ColorRect/MarginContainer/ChatBox" method="_on_LineEdit_new_message"]
[connection signal="new_username" from="name" to="LineEdit" method="_on_name_new_username"]
[connection signal="button_up" from="Join" to="." method="_on_Join_button_up"]
[connection signal="button_up" from="Host" to="." method="_on_Host_button_up"]
